fix drop target more visible

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -210,7 +210,8 @@ body { height: 100%; }
   height: 100%;
   left: 0;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.05);
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  background-color: rgb(83, 89, 93, 0.5)
 }
 
 .drop-overlay {
@@ -222,5 +223,5 @@ body { height: 100%; }
   height: 100%;
   left: 0;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.05);
+  /* background-color: rgba(255, 255, 255, 0.05); */
 }
